src/test/ui/consts/assume-type-intrinsics.stderr
error: any use of this value will cause an error
  --> $SRC_DIR/core/src/mem/maybe_uninit.rs:LL:COL
   |
LL |               intrinsics::assert_inhabited::<T>();
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |               |
   |               aborted execution: attempted to instantiate uninhabited type `!`
   |               inside `MaybeUninit::<!>::assume_init` at $SRC_DIR/core/src/mem/maybe_uninit.rs:LL:COL
   |               inside `_BAD` at $DIR/assume-type-intrinsics.rs:11:9
   | 
  ::: $DIR/assume-type-intrinsics.rs:10:5
   |
LL | /     const _BAD: () = unsafe {
LL | |         MaybeUninit::<!>::uninit().assume_init();
LL | |     };
   | |______-
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to previous error

